--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@syncswap/core-contracts",
-  "description": "Core smart contracts of the SyncSwap protocol",
+  "description": "Core smart contracts of the SyncSwap protocol",g
   "version": "1.0.0",
   "homepage": "https://syncswap.xyz",
   "repository": {
