--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "type": "git",
     "url": "https://github.com/syncswap/core-contracts"
   },
-  "keywords": [
+  "keywords": [.
     "syncswap",
     "zksync",
     "ethereum"
